# DriveWorldModel

./: README.md  pyproject.toml  requirements-cu121.txt
configs/accelerate/: deepspeed_zero2.yaml
configs/cogvideox/: nuscenes_history_traj.yaml  nuscenes_history_traj_train.yaml
configs/deepspeed/: zero2.json
configs/hunyuan/: nuscenes_history.yaml
configs/wan/: nuplan_history_traj.yaml
drivewm/: __init__.py  cli.py  conditions.py  config.py  pipeline.py  registry.py
drivewm/data/: __init__.py  base.py  nuplan.py  nuscenes.py  types.py
drivewm/models/: __init__.py  base.py  diffusers_backend.py
drivewm/models/cogvideox/: __init__.py  adapter.py  training.py
drivewm/models/hunyuan/: __init__.py  adapter.py  training.py
drivewm/models/wan/: __init__.py  adapter.py  training.py
drivewm/training/: __init__.py  data.py  diffusers_trainer.py  entrypoint.py  trainer.py  video_dataset.py
examples/nuplan/manifests/: mini.jsonl
examples/nuscenes/manifests/: mini.jsonl
scripts/: train.py  train.sh  train_cogvideox_lora_nuscenes.py  train_cogvideox_lora_nuscenes.sh  train_diffusers.py  validate_framework.py
