[project]
name = "drive-world-model"
version = "0.1.0"
description = "Integration framework for driving video world models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
diffusers = [
  "accelerate>=0.31",
  "diffusers>=0.37",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
  "pillow>=10.0",
  "sentencepiece>=0.2",
  "torch>=2.3",
  "transformers>=4.44",
]
training = [
  "accelerate>=0.31.0,<1.0",
  "decord>=0.6.0",
  "diffusers>=0.37.0",
  "ftfy>=6.2.0",
  "huggingface-hub>=0.23.0",
  "imageio>=2.34.0",
  "imageio-ffmpeg>=0.5.0",
  "Jinja2>=3.1.0",
  "numpy>=1.23,<2.0",
  "peft>=0.11.1,<0.14",
  "pillow>=10.0.0",
  "protobuf>=3.20.3",
  "PyYAML>=6.0",
  "safetensors>=0.4.3",
  "sentencepiece>=0.2.0",
  "tensorboard>=2.14.0",
  "torch>=2.3,<2.4",
  "torchvision>=0.18,<0.19",
  "tqdm>=4.66.0",
  "transformers>=4.41.2,<4.47",
]

[project.scripts]
drivewm = "drivewm.cli:main"

[tool.setuptools.packages.find]
include = ["drivewm*"]
